--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Run ESLint
         run: npm run lint
       - name: Run Vitest
-        run: npx vitest run
+        run: npm run test -- --run
